# splitflow

./: .dockerignore  .env.example  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Dockerfile  build.rs  docker-compose.yml  pyoxidizer.bzl  readme.md  trace-1737152883065984.json  unit_test_fodder.md
.cargo/: config.toml
assets/test/: bioline_6k_deep.txt  bioline_6k_deep_expected.txt  upc.txt
src/: bootstrap.rs  common.rs  logging.rs  main.rs  util.rs
src/billboard/: console.rs  konsole.rs  mod.rs  perfmon.rs
src/buysell/: mod.rs  python.rs  robinhood.rs
src/core/: database.rs  load.rs  mod.rs  queue.rs
src/discord2/: announce.rs  mod.rs  perfmon.rs  util.rs
src/schedule/: mod.rs
src/scrape/: feed.rs  mod.rs  readme.md  rss_detector.rs  rss_inference.rs  rss_presence.rs  scrape.rs  spoof.rs
