[package]
name = "splitflow"
version = "0.1.0"
edition = "2021"

[dependencies]
confy = "0.6.1"
poise = { version = "0.6.1", features = ["default"] }
serenity = { version = "0.12.4", features = ["default"] }
tokio = { version = "1.43.0", features = ["full", "tracing"] }
chrono = { version = "0.4.39", features = [ "serde"]}
reqwest = { version = "0.12.12", features = ["default", "json", "socks", "rustls-tls"] }
sys-info = "0.9.1"
image = "0.25.5"
imageproc = "0.25.0"
ab_glyph = "0.2.29"
circular-buffer = "0.1.9"
anyhow = "1.0.95"
pretty_env_logger = "0.5.0"
rss = "2.0.9"
serde = { version = "1.0.217", features = ["derive"] }
rand = "0.8.5"
feed-rs = "2.1.1"
serde_json = "1.0.128"
rayon = "1.10.0"
futures = { version = "0.3.31", features = ["default"] }
console-subscriber = "0.4.0"
scraper = "0.22.0"
regex = "1.11.1"
mongodb = "3.1.1"
bson = { version = "2.13.0", features = ["chrono-0_4"] }
quick_cache = "0.6.9"
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
tracing-timing = "0.6.0"
venator = "1.0.0"
apalis = { version = "0.6.4", features = ["limit"] }
apalis-redis = "0.6.4"
email_address = "0.2.9"
apalis-cron = "0.6.4"
thiserror = "2.0.11"
tower = { version = "0.5.2", features = ["load-shed"] }
lazy_static = "1.5.0"
async-trait = "0.1.85"
dotenv = "0.15.0"


[build]
rustflags = ["--cfg", "tokio_unstable"]


[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
debug = false
panic = "abort"
#incremental = false

[alias]
# Build the release binary
build-remote = "build --release"
deploy = "!cargo build --release && scp target/release/your_binary user@remote-machine:/path/to/deploy"
run-remote = "!cargo deploy && ssh user@remote-machine 'cd /path/to/deploy && ./your_binary'"
